[gd_scene load_steps=12 format=3 uid="uid://botw58tf3v867"]

[ext_resource type="Texture2D" uid="uid://h08pdw6jdiww" path="res://Captcha_Level/assets/captcha.png" id="1_fhjus"]
[ext_resource type="Script" path="res://Captcha_Level/captcha.gd" id="1_y1w1w"]
[ext_resource type="Texture2D" uid="uid://bmu1uciqjq64w" path="res://Captcha_Level/assets/select.png" id="2_bd7oj"]
[ext_resource type="Texture2D" uid="uid://bvx0tpuxm8mqy" path="res://Captcha_Level/assets/not_selected.png" id="3_lnywo"]
[ext_resource type="Script" path="res://Captcha_Level/button.gd" id="4_d6xrr"]
[ext_resource type="Texture2D" uid="uid://cf0x2s3p75evq" path="res://Drone_Level/assets/black.png" id="6_k70mr"]
[ext_resource type="PackedScene" uid="uid://bekhfx7rlge5c" path="res://Title_Screen/menu_button.tscn" id="7_dssts"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mkbde"]
texture = ExtResource("2_bd7oj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mqme3"]
texture = ExtResource("2_bd7oj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bo6l4"]
texture = ExtResource("3_lnywo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hk4o6"]
texture = ExtResource("3_lnywo")

[node name="Captcha" type="Node2D"]
script = ExtResource("1_y1w1w")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(497, 377)
texture = ExtResource("1_fhjus")

[node name="Image_7" type="Button" parent="."]
offset_left = 342.0
offset_top = 451.0
offset_right = 441.0
offset_bottom = 554.0
theme_override_styles/hover = SubResource("StyleBoxTexture_mkbde")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mqme3")
theme_override_styles/normal = SubResource("StyleBoxTexture_bo6l4")
script = ExtResource("4_d6xrr")

[node name="Sprite2D" type="Sprite2D" parent="Image_7"]
position = Vector2(50, 51)
scale = Vector2(3.125, 3.1875)
texture = ExtResource("2_bd7oj")

[node name="Image_6" type="Button" parent="."]
offset_left = 550.0
offset_top = 345.0
offset_right = 654.0
offset_bottom = 448.0
theme_override_styles/hover = SubResource("StyleBoxTexture_mkbde")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mqme3")
theme_override_styles/normal = SubResource("StyleBoxTexture_bo6l4")
script = ExtResource("4_d6xrr")

[node name="Sprite2D" type="Sprite2D" parent="Image_6"]
position = Vector2(51.5, 50)
scale = Vector2(3.21875, 3.25)
texture = ExtResource("2_bd7oj")

[node name="Image_5" type="Button" parent="."]
offset_left = 443.0
offset_top = 344.0
offset_right = 547.0
offset_bottom = 447.0
theme_override_styles/hover = SubResource("StyleBoxTexture_mkbde")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mqme3")
theme_override_styles/normal = SubResource("StyleBoxTexture_bo6l4")
script = ExtResource("4_d6xrr")

[node name="Sprite2D" type="Sprite2D" parent="Image_5"]
position = Vector2(53.5, 51.5)
scale = Vector2(3.21875, 3.21875)
texture = ExtResource("2_bd7oj")

[node name="Image_4" type="Button" parent="."]
offset_left = 343.0
offset_top = 345.0
offset_right = 442.0
offset_bottom = 448.0
theme_override_styles/hover = SubResource("StyleBoxTexture_mkbde")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mqme3")
theme_override_styles/normal = SubResource("StyleBoxTexture_bo6l4")
script = ExtResource("4_d6xrr")

[node name="Sprite2D" type="Sprite2D" parent="Image_4"]
position = Vector2(49, 50.5)
scale = Vector2(3.0625, 3.21875)
texture = ExtResource("2_bd7oj")

[node name="Image_1" type="Button" parent="."]
offset_left = 343.0
offset_top = 237.0
offset_right = 442.0
offset_bottom = 340.0
theme_override_styles/hover = SubResource("StyleBoxTexture_mkbde")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mqme3")
theme_override_styles/normal = SubResource("StyleBoxTexture_bo6l4")
script = ExtResource("4_d6xrr")

[node name="Sprite2D" type="Sprite2D" parent="Image_1"]
position = Vector2(50, 52.5)
scale = Vector2(3.125, 3.28125)
texture = ExtResource("2_bd7oj")

[node name="Image_2" type="Button" parent="."]
offset_left = 444.0
offset_top = 239.0
offset_right = 549.0
offset_bottom = 340.0
theme_override_styles/hover = SubResource("StyleBoxTexture_mkbde")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mqme3")
theme_override_styles/normal = SubResource("StyleBoxTexture_bo6l4")
script = ExtResource("4_d6xrr")

[node name="Sprite2D" type="Sprite2D" parent="Image_2"]
position = Vector2(52.5, 50.5)
scale = Vector2(3.21875, 3.21875)
texture = ExtResource("2_bd7oj")

[node name="Image_3" type="Button" parent="."]
offset_left = 550.0
offset_top = 239.0
offset_right = 652.0
offset_bottom = 341.0
theme_override_styles/hover = SubResource("StyleBoxTexture_mkbde")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mqme3")
theme_override_styles/normal = SubResource("StyleBoxTexture_bo6l4")
script = ExtResource("4_d6xrr")

[node name="Sprite2D" type="Sprite2D" parent="Image_3"]
position = Vector2(52, 51)
scale = Vector2(3.1875, 3.25)
texture = ExtResource("2_bd7oj")

[node name="Image_8" type="Button" parent="."]
offset_left = 445.0
offset_top = 452.0
offset_right = 547.0
offset_bottom = 555.0
theme_override_styles/hover = SubResource("StyleBoxTexture_mkbde")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mqme3")
theme_override_styles/normal = SubResource("StyleBoxTexture_bo6l4")
script = ExtResource("4_d6xrr")

[node name="Sprite2D" type="Sprite2D" parent="Image_8"]
position = Vector2(52, 51)
scale = Vector2(3.25, 3.1875)
texture = ExtResource("2_bd7oj")

[node name="Image_9" type="Button" parent="."]
offset_left = 551.0
offset_top = 452.0
offset_right = 654.0
offset_bottom = 555.0
theme_override_styles/hover = SubResource("StyleBoxTexture_mkbde")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mqme3")
theme_override_styles/normal = SubResource("StyleBoxTexture_bo6l4")
script = ExtResource("4_d6xrr")

[node name="Sprite2D" type="Sprite2D" parent="Image_9"]
position = Vector2(51, 50.5)
scale = Vector2(3.1875, 3.21875)
texture = ExtResource("2_bd7oj")

[node name="verify" type="Button" parent="."]
offset_left = 573.0
offset_top = 566.0
offset_right = 653.0
offset_bottom = 600.0
theme_override_styles/normal = SubResource("StyleBoxTexture_hk4o6")

[node name="back" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(495.25, 348.25)
scale = Vector2(5.40222, 4.09556)
texture = ExtResource("6_k70mr")

[node name="Menu button" parent="." instance=ExtResource("7_dssts")]

[connection signal="pressed" from="Image_7" to="Image_7" method="_on_pressed"]
[connection signal="pressed" from="Image_6" to="Image_6" method="_on_pressed"]
[connection signal="pressed" from="Image_5" to="Image_5" method="_on_pressed"]
[connection signal="pressed" from="Image_4" to="Image_4" method="_on_pressed"]
[connection signal="pressed" from="Image_1" to="Image_1" method="_on_pressed"]
[connection signal="pressed" from="Image_2" to="Image_2" method="_on_pressed"]
[connection signal="pressed" from="Image_3" to="Image_3" method="_on_pressed"]
[connection signal="pressed" from="Image_8" to="Image_8" method="_on_pressed"]
[connection signal="pressed" from="Image_9" to="Image_9" method="_on_pressed"]
[connection signal="pressed" from="verify" to="." method="_on_verify_pressed"]
